--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,7 @@
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
+    "truffle": "^5.4.16",
     "web-vitals": "^1.0.1",
     "web3": "^1.6.0"
   },
