--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,8 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
 # dependencies
-/node_modules
+/blockchain/node_modules
+/blockchain/package-lock.json
 /.pnp
 .pnp.js
 
