--- a/.gitignore
+++ b/.gitignore
@@ -13,7 +13,7 @@
 /client/build
 
 # abis
-/client/src/abis
+
 
 # misc
 .DS_Store
@@ -25,3 +25,6 @@
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+
+# Local Netlify folder
+.netlify
